[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/OptionsMenu.gd" type="Script" id=1]
[ext_resource path="res://MenuItems/RemapperControl.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/SubMenu.gd" type="Script" id=3]

[node name="OptionsMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="TopLevelMenu" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )

[node name="Buttons" type="VBoxContainer" parent="TopLevelMenu"]
margin_left = 460.0
margin_top = 277.0
margin_right = 560.0
margin_bottom = 345.0
grow_horizontal = 2
alignment = 1

[node name="ControlsButton" type="Button" parent="TopLevelMenu/Buttons"]
margin_right = 100.0
margin_bottom = 20.0
disabled = true
text = "Controls"

[node name="BackButton" type="Button" parent="TopLevelMenu/Buttons"]
margin_top = 24.0
margin_right = 100.0
margin_bottom = 44.0
disabled = true
text = "Back"

[node name="QuitButton" type="Button" parent="TopLevelMenu/Buttons"]
margin_top = 48.0
margin_right = 100.0
margin_bottom = 68.0
disabled = true
text = "Quit"

[node name="RestartButton" type="Button" parent="TopLevelMenu/Buttons"]
margin_top = 72.0
margin_right = 100.0
margin_bottom = 92.0
text = "Restart Level"

[node name="SubLevelMenu" type="Control" parent="TopLevelMenu"]
margin_left = 502.0
margin_top = 415.0
margin_right = 602.0
margin_bottom = 531.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 1.854, 0 )
script = ExtResource( 3 )

[node name="Buttons" type="VBoxContainer" parent="TopLevelMenu/SubLevelMenu"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="RemapperControl" parent="TopLevelMenu/SubLevelMenu/Buttons" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 130.0
margin_bottom = 20.0
button_text = "move_forward"

[node name="RemapperControl2" parent="TopLevelMenu/SubLevelMenu/Buttons" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 24.0
margin_right = 130.0
margin_bottom = 44.0
button_text = "move_backward"

[node name="RemapperControl3" parent="TopLevelMenu/SubLevelMenu/Buttons" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 48.0
margin_right = 130.0
margin_bottom = 68.0
button_text = "move_right"

[node name="RemapperControl4" parent="TopLevelMenu/SubLevelMenu/Buttons" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 72.0
margin_right = 130.0
margin_bottom = 92.0
button_text = "move_left"

[node name="RemapperControl5" parent="TopLevelMenu/SubLevelMenu/Buttons" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 96.0
margin_right = 130.0
margin_bottom = 116.0
button_text = "crouch"

[node name="RemapperControl6" parent="TopLevelMenu/SubLevelMenu/Buttons" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 120.0
margin_right = 130.0
margin_bottom = 140.0
button_text = "jump"

[node name="BackButton" type="Button" parent="TopLevelMenu/SubLevelMenu/Buttons"]
margin_top = 144.0
margin_right = 130.0
margin_bottom = 164.0
text = "Back"

[connection signal="button_up" from="TopLevelMenu/Buttons/ControlsButton" to="." method="_on_ControlsButton_button_up"]
[connection signal="button_up" from="TopLevelMenu/Buttons/BackButton" to="TopLevelMenu" method="_on_BackButton_button_up"]
[connection signal="button_up" from="TopLevelMenu/Buttons/QuitButton" to="." method="_on_QuitButton_button_up"]
[connection signal="button_up" from="TopLevelMenu/Buttons/RestartButton" to="." method="_on_RestartButton_button_up"]
[connection signal="button_up" from="TopLevelMenu/SubLevelMenu/Buttons/BackButton" to="TopLevelMenu/SubLevelMenu" method="_on_BackButton_button_up"]
